--- a/payment.html
+++ b/payment.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>payment</title>
 </head>
 <body>
-  <h1>Authentification using google</h1>
+  <h1>payment_integration</h1>
 </body>
 </html>
